fix: vertically centre Beta tag on mobile

--- a/Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
@@ -911,6 +911,12 @@ content: "";
     margin-bottom: 30px;
 }
 
+@media (max-width: 32.375em) {
+    .beta-banner .govuk-tag {
+        margin-top: 5px;
+    }
+}
+
 /*
 * Page Banner
 */
