--- a/Childrens-Social-Care-CPD/wwwroot/css/application.css
+++ b/Childrens-Social-Care-CPD/wwwroot/css/application.css
@@ -11000,6 +11000,11 @@ p#content-banner-subtitle.govuk-body-l {
   margin-bottom: 30px;
 }
 
+@media (max-width: 32.375em) {
+  .beta-banner .govuk-tag {
+    margin-top: 5px;
+  }
+}
 /*
 * Page Banner
 */
